--- a/theme/assets/banner-multip-image.css
+++ b/theme/assets/banner-multip-image.css
@@ -1,6 +1,3 @@
-.image-item {
-}
-
 .banner-multip-container {
   background-color: #f4f3f8;
   display: flex;
@@ -88,4 +85,54 @@
   color: #fff;
   font-size: 16px;
   margin: 0 12px;
+}
+
+@media screen and (max-width: 1200px) {
+  .banner-multip-container {
+    padding-top: 20px;
+  }
+
+  .banner-multip-container .image-wrap {
+    width: 100%;
+    padding: 0 12px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 12px;
+  }
+  .banner-multip-container .image-item {
+    width: 100%;
+    height: 300px;
+  }
+
+  .banner-multip-container .image-item:nth-child(1),
+  .banner-multip-container .image-item:nth-child(5) {
+    display: none;
+  }
+
+  .banner-multip-container .image-item:nth-child(2),
+  .banner-multip-container .image-item:nth-child(4) {
+    margin-top: 30px;
+  }
+
+  .banner-multip-container .banner-multip-content-title {
+    font-size: 30px;
+    top: 0;
+    margin-top: 12px;
+  }
+  .banner-multip-container .banner-multip-content-subtitle {
+    margin: 60px 0 0 0;
+    font-size: 20px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .banner-multip-container .image-wrap {
+    padding: 0 8px;
+
+    gap: 8px;
+  }
+  .banner-multip-container .image-item {
+    height: 250px;
+  }
 }
