--- a/theme/assets/component-predictive-search.css
+++ b/theme/assets/component-predictive-search.css
@@ -10,10 +10,31 @@
   z-index: 3;
   border-bottom-right-radius: var(--popup-corner-radius);
   border-bottom-left-radius: var(--popup-corner-radius);
-  box-shadow: var(--popup-shadow-horizontal-offset) var(--popup-shadow-vertical-offset) var(--popup-shadow-blur-radius)
+  box-shadow: var(--popup-shadow-horizontal-offset)
+    var(--popup-shadow-vertical-offset) var(--popup-shadow-blur-radius)
     rgba(var(--color-shadow), var(--popup-shadow-opacity));
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+  border-radius: 8px;
+}
+
+.predictive-search::-webkit-scrollbar {
+  width: 8px;
+}
+
+.predictive-search::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 8px;
+}
+
+.predictive-search::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 8px;
+}
+
+.predictive-search::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  border-radius: 8px;
 }
 
 .predictive-search--search-template {
@@ -38,7 +59,9 @@
     flex-direction: column;
   }
 
-  .predictive-search__results-groups-wrapper:not(.predictive-search__results-groups-wrapper--no-suggestions) {
+  .predictive-search__results-groups-wrapper:not(
+      .predictive-search__results-groups-wrapper--no-suggestions
+    ) {
     /* On mobile, when there are no suggestions the first .predictive-search__results-groups-wrapper
      * is virtually empty due to a display: hidden on the predictive-search__pages-wrapper child.
      * This causes the gap to render and look like a big top margin */
@@ -74,17 +97,21 @@ predictive-search[loading] .predictive-search {
 }
 
 @media screen and (min-width: 750px) {
-  .predictive-search__results-groups-wrapper--no-products .predictive-search__result-group:nth-child(2),
-  .predictive-search__result-group:last-child .predictive-search__pages-wrapper {
+  .predictive-search__results-groups-wrapper--no-products
+    .predictive-search__result-group:nth-child(2),
+  .predictive-search__result-group:last-child
+    .predictive-search__pages-wrapper {
     display: none;
   }
-  .predictive-search__result-group:first-child .predictive-search__pages-wrapper {
+  .predictive-search__result-group:first-child
+    .predictive-search__pages-wrapper {
     display: initial;
   }
   .predictive-search__result-group:first-child {
     flex: 0 0 26.4rem;
   }
-  .predictive-search__results-groups-wrapper--no-products .predictive-search__result-group:first-child,
+  .predictive-search__results-groups-wrapper--no-products
+    .predictive-search__result-group:first-child,
   .predictive-search__result-group:only-child {
     flex-grow: 1;
   }
@@ -118,11 +145,15 @@ predictive-search[loading] .predictive-search__search-for-button {
   display: none;
 }
 
-predictive-search[loading] .predictive-search__results-groups-wrapper ~ .predictive-search__loading-state {
+predictive-search[loading]
+  .predictive-search__results-groups-wrapper
+  ~ .predictive-search__loading-state {
   display: none;
 }
 
-predictive-search[loading] .predictive-search__results-groups-wrapper ~ .predictive-search__search-for-button {
+predictive-search[loading]
+  .predictive-search__results-groups-wrapper
+  ~ .predictive-search__search-for-button {
   display: initial;
 }
 
@@ -134,7 +165,8 @@ predictive-search[loading] .predictive-search__results-groups-wrapper ~ .predict
   background-color: rgba(var(--color-foreground), 0.04);
 }
 
-.predictive-search__list-item[aria-selected='true'] .predictive-search__item-heading,
+.predictive-search__list-item[aria-selected='true']
+  .predictive-search__item-heading,
 .predictive-search__list-item:hover .predictive-search__item-heading {
   text-decoration: underline;
   text-underline-offset: 0.3rem;
