feat: init base app and backend

--- a/theme/sections/apps.liquid
+++ b/theme/sections/apps.liquid
@@ -1,8 +1,16 @@
 <div class="{% if section.settings.include_margins %}page-width{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
   {%- for block in section.blocks -%}
     {% render block %}
+    <p>{{ block }}</p>
   {%- endfor -%}
+  <script>
+    console.log('BLOCK: ' + block);
+  </script>
 </div>
+
+{% javascript %}
+  console.log('BLOCK', block);
+{% endjavascript %}
 
 {% schema %}
 {
