feat: add server review

--- a/app/review-and-recommend/extensions/review-recomend-theme/blocks/reviews.liquid
+++ b/app/review-and-recommend/extensions/review-recomend-theme/blocks/reviews.liquid
@@ -18,7 +18,7 @@
           <ion-label class="text">Nam Phuong Nguyen</ion-label>
         </ion-chip>
       </div>
-      <form action="" id="add-review-form" method="POST" class="review-form">
+      <form action="" id="add-review-form" method="POST" enctype="multipart/form-data" class="review-form">
         <div class="form-input">
           <div class="form-control">
             <label for="rating">Rating:</label>
