--- a/app/review-and-recommend/extensions/review-recomend-theme/assets/review-block.css
+++ b/app/review-and-recommend/extensions/review-recomend-theme/assets/review-block.css
@@ -14,6 +14,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   gap: 50px;
+  margin-bottom: 50px;
 }
 
 .reviews-container .btn-write-modal {
@@ -104,7 +105,6 @@
   width: 100%;
   columns: 4;
   column-gap: 20px;
-  margin-top: 30px;
   margin-bottom: 100px;
 }
 .reviews-list .reviews-item {
