--- a/app/review-and-recommend/extensions/review-recomend-theme/snippets/stars.liquid
+++ b/app/review-and-recommend/extensions/review-recomend-theme/snippets/stars.liquid
@@ -2,49 +2,77 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 {{ 'stars-snippest.css' | asset_url | stylesheet_tag }}
 
-<div class="rating-snippest">
-  <span class="rating-wrap">
-    {%- for i in (1..rating) -%}
-      <ion-icon name="star"></ion-icon>
-    {%- endfor -%}
-    {%- assign blank_stars = 5 | minus: rating -%}
-    {%- for i in (1..blank_stars) -%}
-      <ion-icon name="star-outline"></ion-icon>
-    {%- endfor -%}
+<div class="rating-snippest"></div>
 
-    <p class="no-rating-text">No reviews yet</p>
-  </span>
+<script>
+  (function () {
+    const handle = window.location.pathname.split('/').pop();
+    fetch(`http://localhost:9000/v1/review/rating-count/${handle}`)
+      .then((response) => response.json())
+      .then((data) => {
+        renderRating(data.data);
+      })
+      .catch((error) => console.error('Error fetching data:', error));
 
-  <ul class="rating-detail">
-    <li class="rating-item">
-      <p class="rating-item-number">5</p>
-      <ion-icon name="star"></ion-icon>
-      <span class="rating-item-process"></span>
-      <p class="rating-item-count">0</p>
-    </li>
-    <li class="rating-item">
-      <p class="rating-item-number">4</p>
-      <ion-icon name="star"></ion-icon>
-      <span class="rating-item-process"></span>
-      <p class="rating-item-count">0</p>
-    </li>
-    <li class="rating-item">
-      <p class="rating-item-number">3</p>
-      <ion-icon name="star"></ion-icon>
-      <span class="rating-item-process"></span>
-      <p class="rating-item-count">0</p>
-    </li>
-    <li class="rating-item">
-      <p class="rating-item-number">2</p>
-      <ion-icon name="star"></ion-icon>
-      <span class="rating-item-process"></span>
-      <p class="rating-item-count">0</p>
-    </li>
-    <li class="rating-item">
-      <p class="rating-item-number">1</p>
-      <ion-icon name="star"></ion-icon>
-      <span class="rating-item-process"></span>
-      <p class="rating-item-count">0</p>
-    </li>
-  </ul>
-</div>
+    const renderRating = (data) => {
+      const ratingMedium = document.querySelector('.rating-snippest');
+      console.log('DATA', data, ratingMedium);
+
+      const renderRating = (rating) => {
+        let ratingString = '';
+        for (let i = 1; i <= rating; i++) {
+          ratingString += `<ion-icon name="star"></ion-icon>`;
+        }
+        for (let i = 1; i <= 5 - rating; i++) {
+          ratingString += `<ion-icon name="star-outline"></ion-icon>`;
+        }
+
+        if (rating >= 4) {
+          ratingString += '<p class="no-rating-text">Good!</p>';
+        } else {
+          ratingString += '<p class="no-rating-text">Medium!</p>';
+        }
+        return ratingString;
+      };
+
+      const rating = `<span class="rating-wrap">
+        ${renderRating(data.ratingMedium)}
+        </span>
+
+        <ul class="rating-detail">
+          <li class="rating-item">
+            <p class="rating-item-number">5</p>
+            <ion-icon name="star"></ion-icon>
+            <span class="rating-item-process"></span>
+            <p class="rating-item-count">${data['rating-5']}</p>
+          </li>
+          <li class="rating-item">
+            <p class="rating-item-number">4</p>
+            <ion-icon name="star"></ion-icon>
+            <span class="rating-item-process"></span>
+            <p class="rating-item-count">${data['rating-4']}</p>
+          </li>
+          <li class="rating-item">
+            <p class="rating-item-number">3</p>
+            <ion-icon name="star"></ion-icon>
+            <span class="rating-item-process"></span>
+            <p class="rating-item-count">${data['rating-3']}</p>
+          </li>
+          <li class="rating-item">
+            <p class="rating-item-number">2</p>
+            <ion-icon name="star"></ion-icon>
+            <span class="rating-item-process"></span>
+            <p class="rating-item-count">${data['rating-2']}</p>
+          </li>
+          <li class="rating-item">
+            <p class="rating-item-number">1</p>
+            <ion-icon name="star"></ion-icon>
+            <span class="rating-item-process"></span>
+            <p class="rating-item-count">${data['rating-1']}</p>
+          </li>
+        </ul>`;
+
+      ratingMedium.insertAdjacentHTML('beforeend', rating);
+    };
+  })();
+</script>
